--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-static-gzip": "^1.1.3",
