--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
+    "prettier": "1.18.2",
     "sass-loader": "^7.1.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.4",
