--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "helmet": "^3.20.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.8",
+    "materialize-css": "^1.0.0",
+    "mongoose": "^5.6.9",
     "morgan": "~1.9.0",
     "nodemailer": "^6.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
@@ -41,8 +42,8 @@
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "prettier": "1.18.2",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.39.1",
+    "sass-loader": "^7.2.0",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.4",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0"
